--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>UAE-Project</title>
 </head>
 <body>
-    <h1>Hej</h1>
+    <h1>United Arab Emirates</h1>
+    <p div="introtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae illo dolore, 
+        fugiat omnis animi, alias, quod porro et natus magni accusamus. 
+        Quod eaque ipsum commodi sapiente consequatur, libero illum hic!</p>
+    <img src="UAE Flagga" alt="EAU FLAG">
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+         Quisquam aperiam quod blanditiis eum dolor laudantium velit beatae, nam voluptas, tenetur praesentium.
+         Libero minus odit facilis excepturi consequatur eos doloremque ducimus.</p>
+    
 </body>
 </html>
