--- a/index.html
+++ b/index.html
@@ -4,9 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="frontpage.css">
     <title>UAE-Project</title>
 </head>
 <body>
-    <h1>Hej</h1>
+    <div id="body">
+        <div id="header">
+            <a href="mall.html"><div class="headerbtn"><p>Home</p></div></a>
+            <a href="mall.html"><div class="headerbtn"><p>Culture</p></div></a>
+            <a href="mall.html"><div class="headerbtn"><p>Tradition</p></div></a>
+            <a href="mall.html"><div class="headerbtn"><p>Sights</p></div></a>
+        </div>
+        <div id="text1">
+            
+        </div>
+        <div id="img">
+
+        </div>
+        <div id="text2">
+    
+        </div>
+    </div>
 </body>
 </html>
