--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>UAE-Project</title>
 </head>
 <body>
-    <div id="body">
+    <div id="main">
         <div id="header">
             <a href="mall.html"><div class="headerbtn"><p>Home</p></div></a>
             <a href="mall.html"><div class="headerbtn"><p>Culture</p></div></a>
@@ -16,13 +16,29 @@
             <a href="mall.html"><div class="headerbtn"><p>Sights</p></div></a>
         </div>
         <div id="text1">
-            
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Vero perferendis cupiditate corporis veniam
+                aperiam libero doloribus ullam architecto possimus 
+                eum? Harum qui, labore recusandae voluptas alias s
+                imilique fugit ut nulla.Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit. Vero perferendis cupid
+                itate corporis veniamaperiam libero doloribus ullam 
+                architecto possimus eum? Harum qui, labore recusandae 
+                voluptas alias similique fugit ut nulla.</p>
         </div>
         <div id="img">
 
         </div>
         <div id="text2">
-    
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Vero perferendis cupiditate corporis veniam
+                aperiam libero doloribus ullam architecto possimus 
+                eum? Harum qui, labore recusandae voluptas alias s
+                imilique fugit ut nulla.Lorem ipsum dolor sit amet 
+                consectetur adipisicing elit. Vero perferendis cupid
+                itate corporis veniamaperiam libero doloribus ullam 
+                architecto possimus eum? Harum qui, labore recusandae 
+                voluptas alias similique fugit ut nulla.</p>
         </div>
     </div>
 </body>
