--- a/mall.html
+++ b/mall.html
@@ -10,12 +10,19 @@
 <body>
     <div id="page">
         <div id="header">
-            <div class="anchor"></div>
+            <a href="#"><div class="anchor"><h1>Home</h1></div></a>
+            <a href="#"><div class="anchor"><h1>Sights</h1></div></a>
+            <a href="#"><div class="anchor"><h1>Culture</h1></div></a>
+            <a href="#"><div class="anchor"><h1>Traditions</h1></div></a>
         </div>
         <div id="main">
             <h1>Rubrik</h1>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quia consectetur sint maxime, quos reprehenderit dolore ad cupiditate cumque at ducimus architecto est beatae, fuga aliquam ipsum blanditiis a tempore.
+            </p>
+            <img src="https://cdn.jumeirah.com/-/mediadh/dh/hospitality/jumeirah/hotels/dubai/burj-al-arab-jumeirah/hero/burj-al-arab-profile-exterior_6-4_landscape.jpg?h=800&w=1200" alt="...">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus hic velit est pariatur aut. Nostrum, inventore sint! Labore qui, deserunt quos eligendi ad illo ea saepe, cupiditate illum perspiciatis rem?
             </p>
         </div>
     </div>
