--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             <a href="mall.html"><div class="headerbtn"><p>Tradition</p></div></a>
             <a href="mall.html"><div class="headerbtn"><p>Sights</p></div></a>
         </div>
+        <div id="Rubrik"><h1>United Arab Emirates</h1></div>
         <div id="text1">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing 
                 elit. Vero perferendis cupiditate corporis veniam
@@ -27,7 +28,7 @@
                 voluptas alias similique fugit ut nulla.</p>
         </div>
         <div id="img">
-
+            <img src="./Images/wp1864852.jpg" alt="bild1" id="image1">
         </div>
         <div id="text2">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing 
