--- a/mall.html
+++ b/mall.html
@@ -20,6 +20,7 @@
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi quia consectetur sint maxime, quos reprehenderit dolore ad cupiditate cumque at ducimus architecto est beatae, fuga aliquam ipsum blanditiis a tempore.
             </p>
+            <!--placeholder bild-->
             <img src="https://cdn.jumeirah.com/-/mediadh/dh/hospitality/jumeirah/hotels/dubai/burj-al-arab-jumeirah/hero/burj-al-arab-profile-exterior_6-4_landscape.jpg?h=800&w=1200" alt="...">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus hic velit est pariatur aut. Nostrum, inventore sint! Labore qui, deserunt quos eligendi ad illo ea saepe, cupiditate illum perspiciatis rem?
