--- a/index.html
+++ b/index.html
@@ -4,43 +4,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="frontpage.css">
     <title>UAE-Project</title>
+    <link rel="stylesheet" href="./css filer/mallstyle.css">
 </head>
 <body>
-    <div id="main">
+    <div id="page">
         <div id="header">
-            <a href="mall.html"><div class="headerbtn"><p>Home</p></div></a>
-            <a href="mall.html"><div class="headerbtn"><p>Culture</p></div></a>
-            <a href="mall.html"><div class="headerbtn"><p>Tradition</p></div></a>
-            <a href="mall.html"><div class="headerbtn"><p>Sights</p></div></a>
+            <a href="./index.html"><div class="anchor"><p>Home</p></div></a>
+            <a href="./Sights.html"><div class="anchor"><p>Sights</p></div></a>
+            <a href="./Culture.html"><div class="anchor"><p>Culture</p></div></a>
+            <a href="./Traditions.html"><div class="anchor"><p>Traditions</p></div></a>
         </div>
-        <div id="Rubrik"><h1>United Arab Emirates</h1></div>
-        <div id="text1">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                elit. Vero perferendis cupiditate corporis veniam
-                aperiam libero doloribus ullam architecto possimus 
-                eum? Harum qui, labore recusandae voluptas alias s
-                imilique fugit ut nulla.Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Vero perferendis cupid
-                itate corporis veniamaperiam libero doloribus ullam 
-                architecto possimus eum? Harum qui, labore recusandae 
-                voluptas alias similique fugit ut nulla.</p>
-        </div>
-        <div id="img">
-            <img src="./Images/wp1864852.jpg" alt="bild1" id="image1">
-        </div>
-        <div id="text2">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                elit. Vero perferendis cupiditate corporis veniam
-                aperiam libero doloribus ullam architecto possimus 
-                eum? Harum qui, labore recusandae voluptas alias s
-                imilique fugit ut nulla.Lorem ipsum dolor sit amet 
-                consectetur adipisicing elit. Vero perferendis cupid
-                itate corporis veniamaperiam libero doloribus ullam 
-                architecto possimus eum? Harum qui, labore recusandae 
-                voluptas alias similique fugit ut nulla.</p>
+        <div id="main">
+            <h1>Rubrik</h1>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipisicing 
+                elit. Nisi quia consectetur sint maxime, quos reprehenderit 
+                dolore ad cupiditate cumque at ducimus architecto est beatae, 
+                fuga aliquam ipsum blanditiis a tempore.
+            </p>
+            <!--placeholder bild-->
+            <img src="https://cdn.jumeirah.com/-/mediadh/dh/hospitality/jumeirah/hotels/dubai/burj-al-arab-jumeirah/hero/burj-al-arab-profile-exterior_6-4_landscape.jpg?h=800&w=1200" alt="...">
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing
+                elit. Minus hic velit est pariatur aut. Nostrum, inventore
+                 sint! Labore qui, deserunt quos eligendi ad illo ea saepe, 
+                 cupiditate illum perspiciatis rem?
+            </p>
         </div>
     </div>
+    
 </body>
 </html>
