--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAE-Project</title>
-    <link rel="stylesheet" href="./css filer/mallstyle.css">
+    <link rel="stylesheet" href="./css filer/frontpage.css">
 </head>
 <body>
     <div id="page">
