--- a/Traditions.html
+++ b/Traditions.html
@@ -10,21 +10,29 @@
 <body>
     <div id="page">
         <div id="header">
-            <a href="./index.html"><div class="anchor"><p>Home</p></div></a>
-            <a href="./Sights.html"><div class="anchor"><p>Sights</p></div></a>
-            <a href="./Culture.html"><div class="anchor"><p>Culture</p></div></a>
-            <a href="./Traditions.html"><div class="anchor"><p>Traditions</p></div></a>
+            <a href="./index.html"><div class="btn"><p>Home</p></div></a>
+            <a href="./Sights.html"><div class="btn"><p>Sights</p></div></a>
+            <a href="./Culture.html"><div class="btn"><p>Culture</p></div></a>
+            <a href="./Traditions.html"><div class="btn"><p>Traditions</p></div></a>
         </div>
         <div id="main">
             <h1>United Arab Emirates Traditions</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit. Nisi quia consectetur sint maxime, quos reprehenderit 
-                dolore ad cupiditate cumque at ducimus architecto est beatae, 
-                fuga aliquam ipsum blanditiis a tempore.
+                Falconry is one of the most traditional sports in the United Arab Emirates 
+                and has been a tradition for more than 2,000 years. It is still being passed 
+                down from generation to generation to keep the tradition alive. It is said that 
+                the requirement to be able to control a falcon is to have patience and bond with 
+                the bird, so that the both of you can trust each other. For some time now falconers 
+                have been able to breed falcons and produce new techniques to manage a falcon. The UAE 
+                has a falcon experience that gives you an unimaginable experience of an ancient tradition 
+                in person. Falconry was first used as a method for hunting in the past, nowadays falconers breed 
+                and train their falcons. But they occasionally take their falcons to exhibitions and events that are 
+                taking place all year long in UAE. The national bird of UAE is the falcon, which is the official emblem 
+                of the country that consists of a golden falcon. The reason the falcon is the country’s national bird 
+                is because it symbolizes courage and strength. 
             </p>
             <!--placeholder bild-->
-            <img src="https://cdn.jumeirah.com/-/mediadh/dh/hospitality/jumeirah/hotels/dubai/burj-al-arab-jumeirah/hero/burj-al-arab-profile-exterior_6-4_landscape.jpg?h=800&w=1200" alt="...">
+            <img src="./Images/falconry.jpg" alt="falconry" id="img1">
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing
                 elit. Minus hic velit est pariatur aut. Nostrum, inventore
