--- a/Traditions.html
+++ b/Traditions.html
@@ -10,13 +10,21 @@
 <body>
     <div id="page">
         <div id="header">
-            <a href="./index.html"><div class="btn"><p>Home</p></div></a>
-            <a href="./Sights.html"><div class="btn"><p>Sights</p></div></a>
-            <a href="./Culture.html"><div class="btn"><p>Culture</p></div></a>
-            <a href="./Traditions.html"><div class="btn"><p>Traditions</p></div></a>
+            <a href="./index.html"><div class="btn"><h2>Home</h2></div></a>
+            <a href="./Sights.html"><div class="btn"><h2>Sights</h2></div></a>
+            <a href="./Culture.html"><div class="btn"><h2>Culture</h2></div></a>
+            <a href="./Traditions.html"><div class="btn"><h2>Traditions</h2></div></a>
         </div>
         <div id="main">
             <h1>United Arab Emirates Traditions</h1>
+            <p>
+                The United Arab Emirates is a well-known country for its international events, 
+                modern infrastructure and status as a trade and transport hub. All things aside, 
+                UAE has a lot of different traditions that have been celebrated for decades, for 
+                instance their national day, camel racing, falconry, horse riding and the Dubai shopping festival etc. 
+            </p>
+            <!--placeholder bild-->
+            <img src="./Images/falconry.jpg" alt="falconry" id="img1">
             <p>
                 Falconry is one of the most traditional sports in the United Arab Emirates 
                 and has been a tradition for more than 2,000 years. It is still being passed 
@@ -30,14 +38,6 @@
                 taking place all year long in UAE. The national bird of UAE is the falcon, which is the official emblem 
                 of the country that consists of a golden falcon. The reason the falcon is the country’s national bird 
                 is because it symbolizes courage and strength. 
-            </p>
-            <!--placeholder bild-->
-            <img src="./Images/falconry.jpg" alt="falconry" id="img1">
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Minus hic velit est pariatur aut. Nostrum, inventore
-                 sint! Labore qui, deserunt quos eligendi ad illo ea saepe, 
-                 cupiditate illum perspiciatis rem?
             </p>
         </div>
     </div>
