--- a/Culture.html
+++ b/Culture.html
@@ -10,10 +10,10 @@
 <body>
     <div id="page">
         <div id="header">
-            <a href="./index.html"><div class="anchor"><p>Home</p></div></a>
-            <a href="./Sights.html"><div class="anchor"><p>Sights</p></div></a>
-            <a href="./Culture.html"><div class="anchor"><p>Culture</p></div></a>
-            <a href="./Traditions.html"><div class="anchor"><p>Traditions</p></div></a>
+            <a href="./index.html"><div class="btn"><h2>Home</h2></div></a>
+            <a href="./Sights.html"><div class="btn"><h2>Sights</h2></div></a>
+            <a href="./Culture.html"><div class="btn"><h2>Culture</h2></div></a>
+            <a href="./Traditions.html"><div class="btn"><h2>Traditions</h2></div></a>
         </div>
         <div id="main">
             <h1>Culture</h1>
