--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
     <h1>United Arab Emirates</h1>
-    <p div="introtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae illo dolore, 
+    <div class="introtext"><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae illo dolore, 
         fugiat omnis animi, alias, quod porro et natus magni accusamus. 
-        Quod eaque ipsum commodi sapiente consequatur, libero illum hic!</p>
+        Quod eaque ipsum commodi sapiente consequatur, libero illum hic!</p></div>
     <img src="UAE Flagga" alt="UAE FLAG">
 
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
