--- a/Traditions.html
+++ b/Traditions.html
@@ -37,12 +37,12 @@
                     the requirement to be able to control a falcon is to have patience and bond with 
                     the bird, so that the both of you can trust each other. For some time now falconers 
                     have been able to breed falcons and produce new techniques to manage a falcon. The UAE 
-                    has a falcon experience that gives you an <b>unimaginable</b> experience of an ancient tradition 
+                    has a falcon experience that gives you an unimaginable experience of an ancient tradition 
                     in person. Falconry was first used as a method for hunting in the past, nowadays falconers breed 
                     and train their falcons. But they occasionally take their falcons to exhibitions and events that are 
-                    taking place all year long in UAE. The national bird of UAE is the falcon, which is the official emblem 
-                    of the country that consists of a golden falcon. The reason the falcon is the country’s national bird 
-                    is because it symbolizes courage and strength. 
+                    taking place all year long in UAE. The <b>national bird</b> of UAE is the falcon, which is the official emblem 
+                    of the country that consists of a <b>golden falcon</b>. The reason the falcon is the country’s national bird 
+                    is because it symbolizes <b>courage</b> and <b>strength</b>. 
                 </p>
             </div>
             
@@ -58,7 +58,7 @@
                     agreed on the unification of the country, which resulted in creating the United Arab Emirates. On the 
                     same day, the rulers declared the country’s independence from Britain. Ever since that day citizens of 
                     UAE highly anticipates the national day which celebrates the unification of United Arab Emirates. The 
-                    national day is an especially important day since it shows how peace can be achieved without force or wars. 
+                    <b>national day</b> is an especially important day since it shows how peace can be achieved without force or wars. 
                     The 50th anniversary of being independent was celebrated on December 2, 2021.
                 </p>
             </div>
@@ -71,10 +71,10 @@
                 When people talk about the United Arab Emirates, they often think about Dubai which is 
                 one of the biggest shopping destinations that consists of over seventy malls and still 
                 counting, while new ones open every year. Dubai is a shopping district that is mostly made 
-                up of exclusive brands and expensive clothing. That is when the Dubai shopping festival comes 
+                up of exclusive brands and expensive clothing. That is when the <b>Dubai shopping festival</b> comes 
                 in and offers exceptional discounts on exclusive brands. Dubai shopping festival initially started 
                 on February 16, 1996, as a retail event, which later resulted in becoming a tourist attraction that 
-                attracts three million tourists worldwide each year. The Dubai shopping festival lasts for a month 
+                attracts three million tourists worldwide each year. The <b>Dubai shopping festival</b> lasts for a month 
                 where the discounts and sales on products are crazy, the festival starts from the first week of January 
                 to the first week of February. The festival is often held throughout Dubai since several malls and 
                 retail stores participate. To celebrate the festival some parks, hold different events and light fireworks
