--- a/Traditions.html
+++ b/Traditions.html
@@ -54,7 +54,7 @@
                     various parts of the country. Since the rival tribes were causing problems, Britain offered 
                     protection in exchange for some land. The desperation for peace led to countless tribes accepting 
                     Britain’s offer in 1820. In 1968 Britain came across lots of financial losses which lead to them 
-                    withdrawing. On December 2, 1971, the rulers of Abu Dhabi, Dubai, Al-Ain, Sharjah, and Umm al-Quwain 
+                    withdrawing. On <b>December 2, 1971</b>, the rulers of Abu Dhabi, Dubai, Al-Ain, Sharjah, and Umm al-Quwain 
                     agreed on the unification of the country, which resulted in creating the United Arab Emirates. On the 
                     same day, the rulers declared the country’s independence from Britain. Ever since that day citizens of 
                     UAE highly anticipates the national day which celebrates the unification of United Arab Emirates. The 
