--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                 Due to the good economic situation in the UAE, it is the country with the most luxurious cars for the police, some of the cars are for example Lamborghinis or Bugattis, but not all of them are luxury cars, there are also more common cars like Toyotas, Nissan, etc.
             </p>
             <!--placeholder bild-->
-            <img src="https://cdn.jumeirah.com/-/mediadh/dh/hospitality/jumeirah/hotels/dubai/burj-al-arab-jumeirah/hero/burj-al-arab-profile-exterior_6-4_landscape.jpg?h=800&w=1200" alt="...">
+            <img id="img1"src="./Images/infrastructureUAE.jpg" alt="...">
+
             <p>
                 The UAE flag is a symbol of pride, strength, and unity, its colors are based on its history. The flag was designed by a British soldier and diplomat during World War I to promote unity among Arab forces against the Ottoman Empire. The interpretations of the colors of the flag are:
             </p>
@@ -37,8 +38,9 @@
                 <li id="red">red for sacrifice and bravery</li>
                 <li >white for peace and generosity</li>
                 <li id="green">green for growth, prosperity and progress</li>
-                <li>black for Power and strength.</li>
+                <li><b>black for Power and strength.</b></li>
             </ul>
+            <img id="img2" src="./Images/Flag-United-Arab-Emirates.webp" alt="Image not found...">
         </div>
     </div>
     
