--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                 Today this country is the third richest in the Middle East per capita. 
                 Due to the good economic situation in the UAE, it is the country with the most luxurious cars for the police, some of the cars are for example Lamborghinis or Bugattis, but not all of them are luxury cars, there are also more common cars like Toyotas, Nissan, etc.
             </p>
-            <!--placeholder bild-->
-            <img id="img1"src="./Images/infrastructureUAE.jpg" alt="...">
-
+            <img id="img1"src="./Images/infrastructureUAE.jpg" alt="Imgae not found...">
             <p>
                 The UAE flag is a symbol of pride, strength, and unity, its colors are based on its history. The flag was designed by a British soldier and diplomat during World War I to promote unity among Arab forces against the Ottoman Empire. The interpretations of the colors of the flag are:
             </p>
