--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
             <a href="./Culture.html"><div class="btn"><h2>Culture</h2></div></a>
             <a href="./Traditions.html"><div class="btn"><h2>Traditions</h2></div></a>
         </div>
-        <div id="main">
-            <h1>Rubrik</h1>
+        <div id="main"> 
+            <h1>Introduction to UAE</h1>
             <p>
                 The United Arab Emirates (UAE) is a federation of seven states, one of the Middle East's most important economic centers. 
                 It is a conservative country, but even so, it is considered the most liberal country of all the countries of the Gulf, such as Saudi Arabia, Iran and Oman, with which it has a border, where other cultures, religions, or foreign traditions are not equally accepted. 
