--- a/Sights.html
+++ b/Sights.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UAE-Project</title>
-    <link rel="stylesheet" href="./css filer/mallstyle.css">
+    <link rel="stylesheet" href="./css filer/Sights.css">
 </head>
 <body>
     <div id="page">
@@ -18,18 +18,32 @@
         <div id="main">
             <h1>Sights</h1>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipisicing 
-                elit. Nisi quia consectetur sint maxime, quos reprehenderit 
-                dolore ad cupiditate cumque at ducimus architecto est beatae, 
-                fuga aliquam ipsum blanditiis a tempore.
+                The U.A.E. is a beautiful country with some truly breathtaking sights including groundbreaking architecture. Here are three of the many great sights the U.A.E. has to offer.
             </p>
-            <!--placeholder bild-->
-            <img src="https://cdn.jumeirah.com/-/mediadh/dh/hospitality/jumeirah/hotels/dubai/burj-al-arab-jumeirah/hero/burj-al-arab-profile-exterior_6-4_landscape.jpg?h=800&w=1200" alt="...">
+            <img src="" alt="">
+            <h2>1. The Burj Khalifa (Dubai)</h2>
+            <img src="./Images/Sights1.jpg" alt="Image of the Burj Khalifa shot from the below" id="img100">
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing
-                elit. Minus hic velit est pariatur aut. Nostrum, inventore
-                 sint! Labore qui, deserunt quos eligendi ad illo ea saepe, 
-                 cupiditate illum perspiciatis rem?
+                The Burj Khalifa is a beautiful and impressive feat of architecture. The view at the top is breathtaking and lets you see the entire city from a bird’s eye view. The tower is the tallest building in the world at 828 meters from sea level. Construction started in 2004 and was finished by 2009. It being such an impressive building has garnered a lot of tourist attention and helped the U.A.E. to slightly shift their economy away from oil to tourism. Tickets to the top of the tower costs around €55 for adults during prime tourist months and hours. 
+            </p>
+            <div class="img_txt">
+                <div id="img"><img src="./Images/Sights2.jpg" alt="Hymenocallis flower"></div>
+                <div id="txt"><p>The building was designed by American architect Adrian Smith and his team. It’s designed after a flower called the Hymenocallis flower. The construction itself came to be at the price of €1,3 billion. Reinforced concrete was mainly used during construction of the building. <br>
+<br>                    The elevator from the bottom of the Burj Khalifa to the top travels at 10 meters per second taking it 60 seconds to travel 124 floors. The building records other than just being the tallest building in the world. It also has the most floors and is the tallest freestanding building in the world. 
+                </p></div>
+            </div>
+            <h2>2. The Burj al Arab (Dubai)</h2>
+            <img src="./Images/Sights3.webp" alt="Image of the Burj Al Arab shot from the side">
+            <p>The Burj Al Arab is yet another beautiful feat of architecture. The task which Tom Wright had at his hands was to show the heritage of Arabia in the architecture of the structure. The signature bend of the structure is supposed to look like the sail of an Arabian dhow, which is the name of a traditional trading ship. <br><br>
+            The building was constructed 1999 and stands at 321 meters above sea level. The building is situated at the coast of the Persian Gulf at the edge of Dubai providing a gorgeous view of the ocean and that part of the city <br> <br>
+            The main purpose of the building is not only to look pretty, it’s actually a hotel. The price of spending a night in one of the rooms of the Burj Al Arab is the reason why it’s not usually considered a hotel in conversation. The Burj Al Arab is considered a 7 star hotel and the cost to spend a night is around €25 000. Just to enter the building is around €130 making it a very expensive sight to visit but you can always go there and see it. 
+            </p>
+            <h2>The Seikh Zayed Mosque (Abu Dhabi)</h2>
+            <img src="./Images/Sights4.jpg" alt="Image of the Sheik Zayed Mosque">
+            <p>The Sheikh Zayed Mosque is the biggest mosque in the country situated in the country’s capital Abu Dhabi. The Mosque can hold 41 000 visitors consecutively. If you’re in the city this is a must-see as entry is completely free of charge. <br><br>
+                The construction of the mosque started in 1996 and was finished in late 2007. Building was supervised by the then president of the U.A.E. Sheikh Zayed who the building is named after. The mosque also has one of the world’s largest carpets in the main hall at 5 627m2. The mosque itself covers more than 120 000m2 which is huge. Construction came at the cost of around €508 billion. <br><br>
+                The building’s architectural style is made of a combination of different islamic ones. It has some architectural traits from Fatimid, Mamluk and Ottoman traditions. The mosque features beautiful domes of marble.The interior features one of the world’s biggest chandeliers. Weighing in at 12 tons, the chandelier consisting of stainless steel holds over 40 million Swarovski crystals.  <br><br>
+                The mosque is a symbol of unity for the U.A.E. and the world’s many islamic peoples. It’s a place of cultural exchange, where people outside of the culture can learn more of it.
             </p>
         </div>
     </div>
