--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <a href="./Traditions.html"><div class="btn"><h2>Traditions</h2></div></a>
         </div>
         <div id="main">
-            <h1>Rubrik</h1>
+            <h1>United Arab Emirates</h1>
             <p>
                 The United Arab Emirates (UAE) is a federation of seven states, one of the Middle East's most important economic centers. 
                 It is a conservative country, but even so, it is considered the most liberal country of all the countries of the Gulf, such as Saudi Arabia, Iran and Oman, with which it has a border, where other cultures, religions, or foreign traditions are not equally accepted. 
